@@ -1108,10 +1108,10 @@ A second one with accented char <a name="ANC3"></a>.
 
 <tr><td align="left" valign="top"><a href="#SEC65">7.1 &aring;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
 <tr><td align="left" valign="top"><a href="#SEC66">7.2 &aelig;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
-<tr><td align="left" valign="top"><a href="#SEC67">7.3 &#156;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
+<tr><td align="left" valign="top"><a href="#SEC67">7.3 &oelig;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
 <tr><td align="left" valign="top"><a href="#SEC68">7.4 &Aring;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
 <tr><td align="left" valign="top"><a href="#SEC69">7.5 &AElig;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
-<tr><td align="left" valign="top"><a href="#SEC70">7.6 &#140;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
+<tr><td align="left" valign="top"><a href="#SEC70">7.6 &OElig;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
 <tr><td align="left" valign="top"><a href="#SEC71">7.7 /l</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
 <tr><td align="left" valign="top"><a href="#SEC72">7.8 &oslash;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
 <tr><td align="left" valign="top"><a href="#SEC73">7.9 /L</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
@@ -1171,7 +1171,7 @@ A second one with accented char <a name="ANC3"></a>.
 <td valign="middle" align="left">[Index]</td>
 <td valign="middle" align="left">[<a href="#SEC_About" title="About (this page)"> ? </a>]</td>
 </tr></table>
-<h2> 7.3 &#156; </h2>
+<h2> 7.3 &oelig; </h2>
 <hr size="6">
 <a name="NOD70"></a>
 <a name="SEC68"></a>
@@ -1216,7 +1216,7 @@ A second one with accented char <a name="ANC3"></a>.
 <td valign="middle" align="left">[Index]</td>
 <td valign="middle" align="left">[<a href="#SEC_About" title="About (this page)"> ? </a>]</td>
 </tr></table>
-<h2> 7.6 &#140; </h2>
+<h2> 7.6 &OElig; </h2>
 <hr size="6">
 <a name="NOD73"></a>
 <a name="SEC71"></a>
@@ -1435,6 +1435,10 @@ A second one with accented char <a name="ANC3"></a>.
 </p><p>	&iexcl;
 </p><p>	&iquest;
 </p><p>	&pound;
+</p><p>	@- : 
+	@ followed by end of line: &nbsp;	@ followed by tab: &nbsp;
+	@ followed by space &nbsp;
+	@*: <br> and text followin @*.
 </p><hr size="6">
 <a name="SEC_Foot"></a>
 <table cellpadding="1" cellspacing="1" border="0">
@@ -1536,10 +1540,10 @@ A second one with accented char <a name="ANC3"></a>.
   <ul style="list-style: none">
     <li><a name="TOC65" href="#SEC65">7.1 &aring;</a></li>
     <li><a name="TOC66" href="#SEC66">7.2 &aelig;</a></li>
-    <li><a name="TOC67" href="#SEC67">7.3 &#156;</a></li>
+    <li><a name="TOC67" href="#SEC67">7.3 &oelig;</a></li>
     <li><a name="TOC68" href="#SEC68">7.4 &Aring;</a></li>
     <li><a name="TOC69" href="#SEC69">7.5 &AElig;</a></li>
-    <li><a name="TOC70" href="#SEC70">7.6 &#140;</a></li>
+    <li><a name="TOC70" href="#SEC70">7.6 &OElig;</a></li>
     <li><a name="TOC71" href="#SEC71">7.7 /l</a></li>
     <li><a name="TOC72" href="#SEC72">7.8 &oslash;</a></li>
     <li><a name="TOC73" href="#SEC73">7.9 /L</a></li>
